bitta sahifa qoshilfi

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Allan started</h1>
     <div class="helloworld">
 
+        <button><a href="./second.html">keyingi sahifa otish</a></button>
     </div>
 </body>
 </html>
