--- a/index.html
+++ b/index.html
@@ -16,16 +16,9 @@
 
 </head>
 <body>
-    <h1>Allan started</h1>
-    <div class="helloworld">
+    <h1>Allan, i started to learn english by now !</h1>
+    
 
-        <h3>hello hhhhh</h3>
-        <h1>hello arslonbek</h1>
-
-
-        <button><a href="./second.html">keyingi sahifa otish</a></button>
-
-    </div>
 </body>
 </html>
 
